--- a/PalEats/PalEats/Views/CategoryPage.xaml
+++ b/PalEats/PalEats/Views/CategoryPage.xaml
@@ -5,24 +5,22 @@
              x:Class="PalEats.Views.CategoryPage"              
              xmlns:components="clr-namespace:PalEats.Views"
              xmlns:c="clr-namespace:PalEats.Views"
-             IsPresented="{Binding ShowFlyoutMenu, Mode=TwoWay}"
-
-    Title="PalEats" >
+             Title="PalEats" >
 
     <FlyoutPage.Flyout>
         <c:FlyoutMenuPage x:Name="flyout"/>
     </FlyoutPage.Flyout>
-
     <FlyoutPage.Detail>
         <NavigationPage>
             <x:Arguments>
                 <ContentPage>
-
-
+                    <ContentPage.ToolbarItems>
+                        <ToolbarItem Text="PalEats"  Order="Default" Priority="1" />
+                    </ContentPage.ToolbarItems>
                     <ContentPage.BindingContext>
+                        
                         <local:CategoryPageViewModel/>
                     </ContentPage.BindingContext>
-
                     <ContentPage.Content>
                         <StackLayout BackgroundColor="{StaticResource backgroundColor }">
                             <StackLayout Orientation="Horizontal" Margin="0,15,0,0">
@@ -41,15 +39,14 @@
                                             <Frame IsClippedToBounds="True" Padding="0" HeightRequest="270" CornerRadius="20">
                                                 <RelativeLayout>
                                                     <Image Source="{Binding ImgUrl}" 
-                                   Aspect="AspectFill"
-                                   RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width}"
-                                   RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}"
-                                   
-                                   />
+                                                           Aspect="AspectFill"
+                                                           RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width}"
+                                                           RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}"/>
+
                                                     <Frame BackgroundColor="#907A68"
-                                    Opacity="0.4"
-                                    RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width}"
-                                    RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}" />
+                                                           Opacity="0.4"
+                                                           RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width}"
+                                                           RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}" />
 
                                                     <Label Padding="5" Text="{Binding CategoryName}" HorizontalOptions="CenterAndExpand" FontAttributes="Bold" VerticalOptions="EndAndExpand" RelativeLayout.WidthConstraint="{ConstraintExpression Type=RelativeToParent,Property=Width}" RelativeLayout.HeightConstraint="{ConstraintExpression Type=RelativeToParent,Property=Height}" TextColor="White" FontSize="Large"/>
 
@@ -59,7 +56,6 @@
                                         </DataTemplate>
                                     </CollectionView.ItemTemplate>
                                 </CollectionView>
-
                             </StackLayout>
                             <StackLayout  VerticalOptions="EndAndExpand">
                                 <components:NavigationComponent/>
